<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigationHomeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigationRequestsFragment"
        android:icon="@drawable/ic_request"
        android:title="@string/title_requested" />

    <item
        android:id="@+id/navigationFriendsFragment"
        android:icon="@drawable/ic_friends"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigationProfileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigationMoreFragment"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more" />
</menu>
