<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="frag"
            type="com.georeminder.ui.dashboard.changepassword.ChangePasswordActivity" />
    </data>

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbarLayout"
            layout="@layout/app_toolbar" />

        <EditText
            android:id="@+id/etCurPassword"
            style="@style/etMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/regular_padding"
            android:layout_marginTop="@dimen/regular_padding"
            android:layout_marginRight="@dimen/regular_padding"
            android:hint="@string/current_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etNewPassword"
            style="@style/etMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/regular_padding"
            android:layout_marginTop="@dimen/regular_padding"
            android:layout_marginRight="@dimen/regular_padding"
            android:hint="@string/new_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etConfirmPassword"
            style="@style/etMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/regular_padding"
            android:layout_marginTop="@dimen/regular_padding"
            android:layout_marginRight="@dimen/regular_padding"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSign"
            style="@style/btnMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/regular_padding"
            android:layout_marginTop="@dimen/regular_padding"
            android:layout_marginRight="@dimen/regular_padding"
            android:onClick="@{()->frag.onChangePassword()}"
            android:text="@string/action_submit" />
    </LinearLayout>
</layout>