<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_upper_rounded_corner"
        android:paddingBottom="@dimen/extra_huge_padding">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/myTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/medium_padding"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgEnd"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


        <TextView
            android:id="@+id/tvMsg"
            style="@style/myTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extra_large_padding"
            android:layout_marginEnd="@dimen/extra_large_padding"
            android:gravity="center"
            android:padding="@dimen/medium_padding"
            android:text="@string/msg_add_friend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewLine" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/etMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extra_large_padding"
            android:layout_marginEnd="@dimen/extra_large_padding"
            android:layout_marginTop="@dimen/medium_padding"
            android:backgroundTint="@color/white"
            android:hint="@string/hint_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMsg" />

        <Button
            android:id="@+id/btnAdd"
            style="@style/btnMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extra_large_padding"
            android:layout_marginEnd="@dimen/extra_large_padding"
            android:layout_marginTop="@dimen/large_padding"
            android:text="@string/action_add"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

    </android.support.constraint.ConstraintLayout>
</layout>